--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 # Core dependencies for Tic Tac Toe game
-Flask==3.0.2
-Werkzeug==3.0.1
-click==8.1.7
-Jinja2==3.1.3
-MarkupSafe==2.1.5
+Flask==2.2.3
+Werkzeug==2.2.3
+python-dotenv==1.0.0
+openai==1.3.3
+flask-sqlalchemy==3.0.3
+Jinja2==3.1.2
 itsdangerous==2.1.2
-blinker==1.7.0
-flask[async]>=2.3.0
-openai>=1.0.0
-python-dotenv>=1.0.0
-aiohttp>=3.8.0
+click==8.1.3
+MarkupSafe==2.1.2
+requests==2.28.2
+certifi==2022.12.7
+idna==3.4
+charset-normalizer==3.0.1
+urllib3==1.26.14
