--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 Flask==2.2.3
 Werkzeug==2.2.3
 python-dotenv==1.0.0
-openai==1.3.3
+openai>=1.4.0
 flask-sqlalchemy==3.0.3
 Jinja2==3.1.2
 itsdangerous==2.1.2
@@ -13,3 +13,5 @@ certifi==2022.12.7
 idna==3.4
 charset-normalizer==3.0.1
 urllib3==1.26.14
+torch>=2.0.0
+numpy>=1.24.0
