--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 # Core dependencies for Tic Tac Toe game
-Flask==2.2.3
-Werkzeug==2.2.3
-python-dotenv==1.0.0
+Flask==3.0.2
+Werkzeug==3.0.1
+python-dotenv==1.0.1
 openai>=1.4.0
 flask-sqlalchemy==3.0.3
-Jinja2==3.1.2
+Jinja2==3.1.3
 itsdangerous==2.1.2
-click==8.1.3
+click==8.1.7
 MarkupSafe==2.1.2
 requests==2.28.2
 certifi==2022.12.7
@@ -16,3 +16,5 @@ urllib3==1.26.14
 torch>=2.0.0
 numpy>=1.24.0
 boto3>=1.26.0
+pymongo[srv]==4.6.1
+gunicorn==21.2.0
